# py4zinia-fund

./: .gitee-ci.yml  .gitignore  API.md  BENCHMARK_OVERLAP_ISSUE.md  CHART_FLASH_CHECKLIST.md  CHART_FLASH_DEBUG.md  CLAUDE.md  CODEBUDDY.md  CORRELATION_CHARTS_IMPROVEMENT_PLAN.md  CORRELATION_FIX_SUMMARY.md  DEAD_CODE_REPORT.md  Dockerfile  FUND_CURVES_ENHANCEMENT.md  FUND_NAV_SYNC_GUIDE.md  Jenkinsfile  METRICS_DATA_SOURCE_FIX.md  NET_VALUE_CURVE_FIX_REPORT.md  PORTFOLIO_METRICS_FIX.md  QUICK_FIX_SUMMARY.md  QUICK_FIX_SUMMARY_V2.md  QUICK_START_SYNC.md  README.en.md  README.md  TIME_STATISTICS_IMPLEMENTATION.md  check_db.py  check_db_tables.py  check_divs.py  check_holdings.py  check_yesterday_return.py  check_zero_returns.py  debug_nan.py  debug_script.py  docker-compose.yml  email_format_test.html  email_test_preview.html  fix_cache_table.sql  fix_file.py  fix_html_structure.py  fix_script_tags.py  fix_scripts.py  (+18 more)
pro2/: .env.example  .flake8  .gitee-ci.yml  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  CI_CD_GUIDE.md  CODE_CLEANUP_SUMMARY.md  CODE_REFACTORING_ANALYSIS.md  CORRELATION_LARGE_FUND_FIX.md  CORRELATION_MEMORY_FIX.md  CORRELATION_NAME_DISPLAY_IMPLEMENTATION.md  FUND_CHANGE_UPDATE_IMPLEMENTATION.md  GITEE_CI_GUIDE.md  Makefile  README.md  REFACTORING_COMPLETE_REPORT.md  REFACTORING_SUMMARY.md  STATUS_LABEL_README.md  TEST_PLAN.md  TEST_PLAN_SUMMARY.md  check_fund_list.py  debug_001270.py  debug_nav_detection.py  debug_volatility.py  deleted_files.txt  fund_sharpe_summary_fixed.csv  generate_full_calculation_doc.py  pyproject.toml  pytest.ini  requirements.txt  sharpe_calculation_audit_report.md  sharpe_calculation_full_output.txt  sharpe_results_fixed.txt  show_all_funds_sharpe_calculation.py  show_all_funds_sharpe_summary.py  test_correlation_fix.py  test_dashboard_updates.py  test_easyocr_only.py  test_ocr_config.py  test_portfolio_import.py  (+6 more)
pro2/archive/: README.md  cache_warmup.py  fast_fund_service.py  fund_business_service.py  parallel_fetcher.py
pro2/ci-cd/: deploy.ps1  local-ci.ps1  run-tests.ps1
pro2/cleanup_backup/: CODE_CLEANUP_REPORT.md
pro2/docs/: metrics_system.md
pro2/fund_backtest/: main.py  (+11 more)
(+699 files in other folders)
